# zoneminder

./: .cirrus.yml  .clang-format  .eslintignore  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .readthedocs.yaml  .travis.yml  AGENTS.md  AUTHORS  BUGS  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  ChangeLog  Dockerfile  INSTALL  Makefile  Makefile.am  Makefile.in  README  README-OmniOS.txt  README.doc  README.html  README.md  README.rtf  README.txt  RELEASE_NOTES_1.37.md  Readme.osx  SECURITY.md  STATUS.md  TODO  _config.yml  about.md  acinclude.m4  (+37 more)
db/: AI_Models.sql  CMakeLists.txt  GPSReading.sql  MagicLogins.sql  Magic_Links.sql  Makefile.am  Makefile.in  Object_Types.sql  User_Preferences.sql  coco_dataset.sql  feature-plugins.sql  manufacturers.sql  models.sql  monitors_dbupdate.sql  test.monitor.sql  triggers.sql  views.sql  zm_create.sql  zm_create.sql.in  zm_create.sql.in~  zm_data.sql  zm_update-0.9.10.sql  zm_update-0.9.15.sql  zm_update-0.9.7.sql  zm_update-0.9.9.sql  zm_update-1.17.2.sql  zm_update-1.18.0.sql  zm_update-1.19.1.sql  zm_update-1.19.2.sql  zm_update-1.19.4.sql  zm_update-1.19.5.sql  zm_update-1.20.1.sql  zm_update-1.21.0.sql  zm_update-1.21.1.sql  zm_update-1.21.2.sql  zm_update-1.21.3.sql  zm_update-1.21.4.sql  zm_update-1.22.0.sql  zm_update-1.22.1.sql  zm_update-1.22.2.sql  (+288 more)
dep/: CMakeLists.txt
dep/jwt-cpp/: .clang-format  .clang-tidy  .cmake-format  .editorconfig  .gitignore  BaseTest.cpp  CMakeLists.txt  Doxyfile  LICENSE  README.md  TestMain.cpp  TokenFormatTest.cpp  jwt-cpp-config-version.cmake  jwt-cpp-config.cmake  jwt-cpp.vcxproj.filters
dep/libbcrypt/: README.md
dep/span-lite/: CMakeLists.txt  README.md
distros/fedora/: CMakeLists.txt  README.Fedora  README.https  README.txt  jscalendar.sh  zoneminder-1.24.3-runlevel.patch  zoneminder-1.24.4-installfix.patch  zoneminder-1.26.0-defaults.patch  zoneminder-1.26.3-noffmpeg.patch  zoneminder-1.26.4-dbinstall.patch  zoneminder-1.28.0-defaults.patch  zoneminder.cmake.f19.spec  zoneminder.cmake.f20.spec  zoneminder.conf  zoneminder.conf.in  zoneminder.f19.spec  zoneminder.f20.spec  zoneminder.f21.spec  zoneminder.f22.spec  zoneminder.f23.spec  zoneminder.f24.spec  zoneminder.f25.spec  zoneminder.logrotate  zoneminder.logrotate.in  zoneminder.service  zoneminder.service.in  zoneminder.tmpfiles.in
distros/opensuse/: CMakeLists.txt  README.OpenSuse  ZoneMinder.spec  build_ZoneMinder-MP.txt  zoneminder-1.26.5-opensuse.patch  zoneminder.cmake.OS13.spec  zoneminder.conf  zoneminder.logrotate  zoneminder.service  zoneminder.tmpfiles
distros/redhat/: CMakeLists.txt  README.CentOS  README.Centos7  README.Fedora  README.SuSE  README.https  build.txt  jscalendar.sh  local_zoneminder.te  zm-init  zoneminder-1.26.0-dbinstall.patch  zoneminder.in  (+17 more)
misc/: CMakeLists.txt  MacVendors.json  Makefile.am  Makefile.in  apache-cors.conf  apache.conf  apache.conf.in  com.zoneminder.arp-scan.policy.in  com.zoneminder.arp-scan.rules.in  com.zoneminder.dnsmasq.policy.in  com.zoneminder.dnsmasq.rules.in  com.zoneminder.systemctl.policy  com.zoneminder.systemctl.policy.in  com.zoneminder.systemctl.rules  com.zoneminder.systemctl.rules.in  fail2ban.rules  janus.jcfg  janus.plugin.streaming.jcfg  janus.transport.http.jcfg  libzoneminder.pc.in  logcheck  logrotate.conf  logrotate.conf.in  nginx.conf.in  plugins.conf.in  syslog.conf  syslog.conf.in  zm-sudo.in  zoneminder-tmpfiles.conf.in  zoneminder.desktop  zoneminder.desktop.in  zoneminder.gortc.service  zoneminder.monit.conf  zoneminder.service.in
onvif/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.old  README
scripts/: CMakeLists.txt  Makefile.am  Makefile.in  zm  zm.in  zm.z  zmalarm-server.py  zmaudit.pl  zmaudit.pl.in  zmaudit.pl.z  zmcamtool.pl.in  zmcontrol-axis-v2.pl  zmcontrol-axis-v2.pl.z  zmcontrol-kx-hcm10.pl  zmcontrol-kx-hcm10.pl.z  zmcontrol-ncs370.pl  zmcontrol-panasonic-ip.pl  zmcontrol-pelco-d.pl  zmcontrol-pelco-d.pl.z  zmcontrol-pelco-p.pl  zmcontrol-pelco-p.pl.z  zmcontrol-visca.pl  zmcontrol-visca.pl.z  zmcontrol.pl  zmcontrol.pl.in  zmdbbackup  zmdbbackup.in  zmdbrestore  zmdbrestore.in  zmdc.pl  zmdc.pl.in  zmdc.pl.z  zmeventdump  zmeventdump.in  zmeventtool.pl.in  zmfilter.pl  zmfilter.pl.in  zmfilter.pl.z  zmlogrotate.conf  zmlogrotate.conf.in  (+29 more)
src/: .cproject  .project  CMakeLists.txt  Makefile.am  Makefile.in  bindings.h  cmake_install.cmake  config.h.in  configure  event.wsdl  jinclude.h  jmemdst.c  libzmplugins.pc.in  netint_network.cpp  netint_network.h  ni_log.cpp  ni_log.h  ni_yolo_utils.cpp  ni_yolo_utils.h  nierrno.h  snprintf.cpp  soap.nsmap  soapC.cpp  soapH.h  soapPullPointSubscriptionBindingProxy.cpp  soapPullPointSubscriptionBindingProxy.h  soapStub.h  yolo_model.h  yolo_postprocess.h  yolov4_postprocess.cpp  yolov5_postprocess.cpp  yolov8_postprocess.cpp  zm.cpp  zm.h  zm_Authenticator.cpp  zm_Authenticator.h  zm_ai_server.cpp  zm_ai_server.h  zm_analysis_thread.cpp  zm_analysis_thread.h  (+252 more)
tests/: CMakeLists.txt  main.cpp  zm_box.cpp  zm_catch2.h  zm_comms.cpp  zm_config.cpp  zm_crypt.cpp  zm_db_schema.cpp  zm_ffmpeg_camera.cpp  zm_ffmpeg_fallback.cpp  zm_font.cpp  zm_image.cpp  zm_image_linesize.cpp  zm_monitorstream.cpp  zm_onvif_renewal.cpp  zm_onvif_wsse.cpp  zm_pixformat.cpp  zm_poly.cpp  zm_secondary_sync.cpp  zm_swscale_range.cpp  zm_time.cpp  zm_utils.cpp  zm_vector2.cpp  zm_websocket.cpp  zm_zone.cpp  zm_zone_stride.cpp
web/: .gitignore  CMS.php  CMakeLists.txt  Makefile.am  Makefile.in  README.md  composer.json  floorplan.css  floorplan.html  floorplan.js  fp_delete.php  fp_getinfo.php  fp_insert.php  fp_modify.php  index.html  index.php  retag.sh  robots.txt  swap.pl  zm.php  zmHttpd.conf.in  zm_actions.php  zm_config.php.in  zm_config.php.z  zm_control_funcs.php  zm_control_funcsX.php  zm_db.php  zm_export_funcs.php  zm_funcs.php  zm_help.php  zm_html.js  zm_html.php  zm_html_base.css  zm_html_config.php  zm_html_js.php  zm_html_reset.css  zm_html_styles.css  zm_html_view_bandwidth.php  zm_html_view_blank.php  zm_html_view_console.php  (+117 more)
(+5539 files in other folders)
